@@ -49,19 +49,6 @@ object Scrooge extends Build {
     ScroogeRunner.genTestThriftTask
   )
 
-  def scalacOptionsVersion(sv: String): Seq[String] = {
-    Seq(
-      "-deprecation",
-      "-unchecked",
-      "-feature",
-      "-Xlint",
-      "-encoding", "utf8"
-    ) ++ (CrossVersion.partialVersion(sv) match {
-      case Some((2, x)) if x >= 11 => Seq("-Ypatmat-exhaust-depth", "40")
-      case _ => Nil
-    })
-  }
-
   val sharedSettingsWithoutScalaVersion = Seq(
     version := libVersion,
     organization := "com.twitter",
@@ -70,12 +57,7 @@ object Scrooge extends Build {
       "sonatype-public" at "https://oss.sonatype.org/content/groups/public"
     ),
 
-    ScoverageSbtPlugin.ScoverageKeys.coverageHighlighting := (
-      CrossVersion.partialVersion(scalaVersion.value) match {
-        case Some((2, 10)) => false
-        case _ => true
-      }
-    ),
+    ScoverageSbtPlugin.ScoverageKeys.coverageHighlighting := true,
 
     libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % "2.2.4" % "test",
@@ -84,7 +66,14 @@ object Scrooge extends Build {
     ),
     resolvers += "twitter-repo" at "https://maven.twttr.com",
 
-    scalacOptions := scalacOptionsVersion(scalaVersion.value),
+    scalacOptions := Seq(
+      "-target:jvm-1.8",
+      "-deprecation",
+      "-unchecked",
+      "-feature", "-Xlint",
+      "-encoding", "utf8",
+      "-Ypatmat-exhaust-depth", "40"
+    ),
 
     // Sonatype publishing
     publishArtifact in Test := false,
@@ -131,16 +120,14 @@ object Scrooge extends Build {
   val sharedSettings =
     sharedSettingsWithoutScalaVersion ++
     Seq(
-      crossScalaVersions := Seq("2.10.6", "2.11.7"),
-      scalaVersion := "2.11.7",
-      javacOptions ++= Seq("-source", "1.7", "-target", "1.7", "-Xlint:unchecked"),
-      javacOptions in doc := Seq("-source", "1.7")
+      scalaVersion := "2.11.8",
+      javacOptions ++= Seq("-source", "1.8", "-target", "1.8", "-Xlint:unchecked"),
+      javacOptions in doc := Seq("-source", "1.8")
     )
 
   val settingsWithTwoTen =
     sharedSettingsWithoutScalaVersion ++
     Seq(
-      crossScalaVersions := Seq("2.10.6"),
       scalaVersion := "2.10.6",
       javacOptions ++= Seq("-source", "1.7", "-target", "1.7", "-Xlint:unchecked"),
       javacOptions in doc := Seq("-source", "1.7")
@@ -195,18 +182,15 @@ object Scrooge extends Build {
       assemblySettings
   ).settings(
     name := "scrooge-generator",
-    libraryDependencies ++= (Seq(
+    libraryDependencies ++= Seq(
       "org.apache.thrift" % "libthrift" % libthriftVersion,
       "com.github.scopt" %% "scopt" % "3.3.0",
       "com.github.spullara.mustache.java" % "compiler" % "0.8.18",
       "org.codehaus.plexus" % "plexus-utils" % "1.5.4",
       "com.google.code.findbugs" % "jsr305" % "2.0.1",
-      "commons-cli" % "commons-cli" % "1.3.1"
-    ).++(CrossVersion.partialVersion(scalaVersion.value) match {
-      case Some((2, x)) if x >= 11 =>
-        Seq("org.scala-lang.modules" %% "scala-parser-combinators" % "1.0.4")
-      case _ => Nil
-    })),
+      "commons-cli" % "commons-cli" % "1.3.1",
+      "org.scala-lang.modules" %% "scala-parser-combinators" % "1.0.4"
+    ),
     test in assembly := {},  // Skip tests when running assembly.
     mainClass in assembly := Some("com.twitter.scrooge.Main")
   )
