@@ -5,6 +5,11 @@ as it is included in Scrooge's user's guide.
 4.x
 -----
 
+- Builds are now only for Java 8 and Scala 2.11. See the
+  `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
+  for details. ``RB_ID=828898``
+
+
 ~~~~~
 
 4.7.0
